--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
 	<base>
 	<meta charset="utf-8">
 	<title>Jason Mone</title>
-	<link href="https://static1.squarespace.com/static/58d78959d2b857f33fb6172c/t/5a9d7638419202ab8bd24491/favicon.ico" rel="shortcut icon" type="image/x-icon">
+<!-- 	<link href="https://static1.squarespace.com/static/58d78959d2b857f33fb6172c/t/5a9d7638419202ab8bd24491/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="https://www.jasonmone.com/" rel="canonical">
 	<meta content="jason" property="og:site_name">
 	<meta content="portfolio" property="og:title">
@@ -21,7 +21,7 @@
 	<link href="http://static1.squarespace.com/static/58d78959d2b857f33fb6172c/t/5a9d763d0d9297a1f840dac9/1520268862489/logo.png?format=1000w" rel="image_src">
 	<meta content="http://static1.squarespace.com/static/58d78959d2b857f33fb6172c/t/5a9d763d0d9297a1f840dac9/1520268862489/logo.png?format=1000w" itemprop="image">
 	<meta content="portfolio" name="twitter:title">
-	<meta content="http://static1.squarespace.com/static/58d78959d2b857f33fb6172c/t/5a9d763d0d9297a1f840dac9/1520268862489/logo.png?format=1000w" name="twitter:image">
+	<meta content="http://static1.squarespace.com/static/58d78959d2b857f33fb6172c/t/5a9d763d0d9297a1f840dac9/1520268862489/logo.png?format=1000w" name="twitter:image"> -->
 	<meta content="https://www.jasonmone.com/" name="twitter:url">
 	<meta content="summary" name="twitter:card">
 	<meta content="" name="description">
