--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -49,20 +49,23 @@
 			{"url":"https://www.jasonmone.com","name":"jason","description":"","image":"//static1.squarespace.com/static/58d78959d2b857f33fb6172c/t/5a9d763a71c10b48d02c1758/1525256547323/","@context":"http://schema.org","@type":"WebSite"}
 	</script>
 	<script type="application/ld+json">
-			{"legalName":"jason","email":"hello@jasonmone.com","telephone":"","@context":"http://schema.org","@type":"Organization"}
+			{"legalName":"jason","email":"jason.mone@pm.me","telephone":"","@context":"http://schema.org","@type":"Organization"}
 	</script><!--[if gte IE 9]> <link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&part=1"/><link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&part=2"/><link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&part=3"/><link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&part=4"/><![endif]-->
 	<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&noMedia=true&part=1"/><link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&noMedia=true&part=2"/><link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&noMedia=true&part=3"/><link rel="stylesheet" type="text/css" href="//static1.squarespace.com/static/sitecss/58d78959d2b857f33fb6172c/36/4fbff70b84aeca67fb3a3c56/58d7a8f1579fb308146cfb39/858-05142015/1520009768659/site.css?&filterFeatures=false&noMedia=true&part=4"/><![endif]-->
 	<!--[if !IE]> -->
-	<script src="https://fast.wistia.com/embed/medias/bgiplqy92u.jsonp" async></script>
-	<script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+
+
+
+<!-- 	<script src="https://fast.wistia.com/embed/medias/bgiplqy92u.jsonp" async></script>
+	<script src="https://fast.wistia.com/assets/external/E-v1.js" async></script> -->
 
 
 	<link href="/css/main.css" rel="stylesheet" type="text/css"><!-- <![endif]-->
 	<!-- End of Squarespace Headers -->
 
 	<link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssgrids/cssgrids-min.css">
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssgrids-responsive/cssgrids-responsive-min.css">
+	<link rel="stylesheet" type="text/css" href="css/cssgrids.min.css">
+	<link rel="stylesheet" type="text/css" href="css/cssgrids-responsive.min.css">
 	<link rel="stylesheet" href="bower_components/swiper/swiper.min.css">
 
 </head>
