--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -4,7 +4,7 @@
             <div id="logo" data-content-field="site-title">
                 <h1 class="logo">
                     <a href="/">
-                     <img src="/img/photo.png" alt="Camellie">
+                     <img src="/img/photo.jpg" alt="jason">
                     </a>
                 </h1>
             </div>
