--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -3,10 +3,10 @@
 <script type="text/javascript" data-sqs-type="imageloader-bootstraper">(function() {if(window.ImageLoader) { window.ImageLoader.bootstrap({}, document); }})();</script>
 
 <script type="text/javascript" src="/static1.squarespace.com/static/ta/4fbff6b4c4aac2e9749c152f/858/scripts/combo/indexbaa6.js"></script>
-<script src="bower_components/aos/dist/aos.js"></script>
+<!-- <script src="bower_components/aos/dist/aos.js"></script>
 <script>
   AOS.init();
-</script>
+</script> -->
 <script>
 Squarespace.afterBodyLoad(Y);
 </script>
