--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,11 +25,11 @@
 	<meta content="https://www.jasonmone.com/" name="twitter:url">
 	<meta content="summary" name="twitter:card">
 	<meta content="" name="description">
-	<script src="//use.typekit.net/ik/OJl1uM6RFKQUbRtAtZcQNtL9ImfW7eHtWsB5JlOd1FGfeGG2fFHN4UJLFRbh52jhWD9tZ2St5Q9oZ24K529aZRwDZcJhwQSkjUTtHKoRjAu8deUTZPoDSWmyScmDSeBRZPoRdhXCjhBlZAUC-A90jhNlOeFydAmCde88O1FUiABkZWF3jAF8OcFzdPUCdhFydeyzSabCiaiaOcFydAmCde88OcFzdPUaiaS0jhBlZAUC-A90SaBujW48Sagyjh90jhNlJyBKScB0ZeN0OAikdas8SaBuZPJeZWmkdagyH6qJ08MbMg6gJMJ7fbK_9gMMeMC6MKG4fOUbIMMjMkMfH6qJzmMbMg6FJMJ7fbKh9gMMeMb6MKG4fOibIMMj2KMfH6qJz8MbMg6BJMJ7fbKx9gMMeMv6MKG4fOybIMMjgkMfH6qJ0mMbMg6sJMJ7fbRM9gMMeMq6MKG4fwBbIMMjIkMfH6qJ7WqbMs62JMJ7f6RRy6IbMs6FJMJ7fbK7psMgeMb6MKGHf5PeMsMgeMt6MKG4fHyoIMIjgkMfH6GJojjgIMIjIPMfqMeYc0Yegb.js" type="text/javascript">
+	<!-- <script src="//use.typekit.net/ik/OJl1uM6RFKQUbRtAtZcQNtL9ImfW7eHtWsB5JlOd1FGfeGG2fFHN4UJLFRbh52jhWD9tZ2St5Q9oZ24K529aZRwDZcJhwQSkjUTtHKoRjAu8deUTZPoDSWmyScmDSeBRZPoRdhXCjhBlZAUC-A90jhNlOeFydAmCde88O1FUiABkZWF3jAF8OcFzdPUCdhFydeyzSabCiaiaOcFydAmCde88OcFzdPUaiaS0jhBlZAUC-A90SaBujW48Sagyjh90jhNlJyBKScB0ZeN0OAikdas8SaBuZPJeZWmkdagyH6qJ08MbMg6gJMJ7fbK_9gMMeMC6MKG4fOUbIMMjMkMfH6qJzmMbMg6FJMJ7fbKh9gMMeMb6MKG4fOibIMMj2KMfH6qJz8MbMg6BJMJ7fbKx9gMMeMv6MKG4fOybIMMjgkMfH6qJ0mMbMg6sJMJ7fbRM9gMMeMq6MKG4fwBbIMMjIkMfH6qJ7WqbMs62JMJ7f6RRy6IbMs6FJMJ7fbK7psMgeMb6MKGHf5PeMsMgeMt6MKG4fHyoIMIjgkMfH6GJojjgIMIjIPMfqMeYc0Yegb.js" type="text/javascript">
 	</script>
 	<script type="text/javascript">
 			try{Typekit.load();}catch(e){}
-	</script>
+	</script> -->
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,700i,700,300i,400" rel="stylesheet" type="text/css">
 	<script type="text/javascript">
 			SQUARESPACE_ROLLUPS = {};
@@ -63,7 +63,7 @@
 	<link href="/css/main.css" rel="stylesheet" type="text/css"><!-- <![endif]-->
 	<!-- End of Squarespace Headers -->
 
-	<link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+	<!-- <link rel="stylesheet" href="bower_components/aos/dist/aos.css" /> -->
 	<link rel="stylesheet" type="text/css" href="css/cssgrids.min.css">
 	<link rel="stylesheet" type="text/css" href="css/cssgrids-responsive.min.css">
 	<link rel="stylesheet" href="bower_components/swiper/swiper.min.css">
