--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div class="index-section index-page-transition-link">
 				<h1>Deliver delightful experiences</h1>
-				<a class="chatbutton btn-standard btn-blue" data-section="Navbar" href="">Let's Chat</a>
+				<a class="chatbutton btn-standard btn-blue" data-section="Navbar" href="mailto:jason.mone@pm.me">Let's Chat</a>
 				</ul>
 			</div>
 			<div class="index-section index-page-transition-link">
